# vivainnovation-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: jwt_handler.py  main.py  post.py  user.py  users.py
app/: api_test.py  hashing.py  main.py  user.py
app/migration/: env.py
app/migrations/: env.py
