[tool.poetry]
name = "vivainnovation-project"
version = "0.1.0"
description = ""
authors = ["fad0805 <s222y@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
